# Kaoruko_v1

./: .env.template  .gitignore  BUILD.bat  BUILD_INSTALLER.bat  README.md  kaoruko_installer.iss  main.py  pyproject.toml  requirements.txt
build_hooks/: hook-kaoruko.py  rthook_windows.py  version_info.txt
config/: kaoruko.yaml
kaoruko/: __init__.py  __main__.py  version.py
kaoruko/core/: assistant.py  event_bus.py  session.py  state_machine.py
kaoruko/execution/: executor.py  registry.py
kaoruko/execution/handlers/: app_control.py  assistant_handler.py  audio_control.py  browser_control.py  file_manager.py  keyboard_control.py  network_control.py  notification.py  reminder_scheduler.py  system_control.py  window_manager.py  workflow_engine.py
kaoruko/infrastructure/config/: config_manager.py  schema.py
kaoruko/infrastructure/logging/: logger.py
kaoruko/infrastructure/telemetry/: metrics.py
kaoruko/intelligence/: ai_router.py
kaoruko/memory/: long_term.py  memory_manager.py
kaoruko/nlu/: intent_classifier.py  language_detector.py  local_nlu.py  rule_engine.py
kaoruko/plugins/: plugin_base.py
kaoruko/plugins/built_in/system_info/: __init__.py  manifest.json
kaoruko/plugins/built_in/weather/: __init__.py  manifest.json
kaoruko/security/: confirmation.py  secrets_manager.py
kaoruko/ui/: app.py
kaoruko/ui/animations/: animation_engine.py
kaoruko/ui/themes/: theme_engine.py
kaoruko/ui/widgets/: history_widget.py  settings_panel.py  status_bar.py  transcript_widget.py
kaoruko/voice/: pipeline.py
kaoruko/voice/stt/: audio_capture.py  noise_suppressor.py  recognizer.py  vad.py
kaoruko/voice/tts/: synthesizer.py
kaoruko/voice/wake_word/: detector.py
scripts/: setup_windows.py
tests/: conftest.py
tests/integration/: test_nlu_pipeline.py
tests/unit/: test_ai_router.py  test_core.py  test_event_bus.py  test_executor.py  test_language_detector.py  test_plugin_manager.py  test_rule_engine.py  test_secrets_manager.py  test_voice_pipeline_thread_safety.py
