[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kaoruko"
version = "1.0.0"
description = "Kaoruko — Elite AI Desktop Voice Assistant"
authors = [{ name = "Kaoruko Project" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "voice-assistant", "desktop", "windows", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # UI
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",

    # Audio
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "noisereduce>=3.0.0",
    "pygame>=2.5.0",

    # STT
    "faster-whisper>=1.0.0",
    "SpeechRecognition>=3.10.0",

    # TTS
    "edge-tts>=6.1.9",

    # Wake word
    "openwakeword>=0.6.0",

    # NLU / AI
    "spacy>=3.7.0",
    "sentence-transformers>=2.2.0",
    "langdetect>=1.0.9",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "ollama>=0.3.0",

    # Desktop control
    "pywin32>=306",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "pycaw>=20230407",
    "playwright>=1.40.0",
    "send2trash>=1.8.2",
    "psutil>=5.9.6",
    "screen-brightness-control>=0.23.0",

    # Notifications
    "win10toast-reborn>=0.9.3.1",

    # Database
    "SQLAlchemy>=2.0.23",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",

    # Config / Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "ruamel.yaml>=0.18.0",

    # Security
    "cryptography>=41.0.0",

    # Infrastructure
    "structlog>=23.2.0",
    "rich>=13.7.0",
    "diskcache>=5.6.3",
    "dependency-injector>=4.41.0",

    # Utilities
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "watchdog>=3.0.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "ipython>=8.17.0",
]
elevenlabs = ["elevenlabs>=0.3.0"]
local-tts = ["TTS>=0.22.0"]
full = ["kaoruko[dev,elevenlabs,local-tts]"]

[project.scripts]
kaoruko = "kaoruko.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kaoruko*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["kaoruko"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["kaoruko"]
omit = ["tests/*", "scripts/*"]
